<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/donate_weixin"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:text="@string/donate_weixin"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/donate_alipay"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="206dp"
            tools:layout_conversion_wrapHeight="50"
            tools:layout_conversion_wrapWidth="154"
            android:background="@drawable/donate_weixin_shape"/>

        <TextView
            android:id="@+id/donate_alipay"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:text="@string/donate_alipay"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/donate_weixin"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="206dp"
            tools:layout_conversion_wrapHeight="50"
            tools:layout_conversion_wrapWidth="154"
            android:background="@drawable/donate_alipay_shape"/>

        <TextView
            android:id="@+id/donate_text"
            android:layout_width="271dp"
            android:layout_height="185dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/donate_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/donate_radios"
            android:layout_width="212dp"
            android:layout_height="66dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donate_text">

            <RadioButton
                android:id="@+id/donate_one"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"

                android:background="@drawable/button_white_bakground"
                android:button="@null"
                android:gravity="center"
                android:text="@string/donate_one" />

            <RadioButton
                android:id="@+id/donate_three"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_white_bakground"
                android:button="@null"
                android:gravity="center"
                android:text="@string/donate_three" />

            <RadioButton
                android:id="@+id/donate_display"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_white_bakground"
                android:button="@null"
                android:gravity="center"
                android:text="@string/donate_renyi"
                android:textSize="14dp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:text="@string/donate_attention"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donate_radios" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>