<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/scrollView3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="320dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <!--android:background="@drawable/base">-->

        <ImageButton
            android:id="@+id/camera_imageButton3"
            android:layout_width="109dp"
            android:layout_height="99dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="110dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/camera_imageButton2"
            app:layout_constraintTop_toBottomOf="@+id/item_detail"
            app:srcCompat="@drawable/camera" />

        <ImageButton
            android:id="@+id/camera_imageButton2"
            android:layout_width="109dp"
            android:layout_height="99dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="110dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/camera_imageButton1"
            app:layout_constraintTop_toBottomOf="@+id/item_detail"
            app:srcCompat="@drawable/camera" />

        <ImageButton
            android:id="@+id/camera_imageButton1"
            android:layout_width="109dp"
            android:layout_height="99dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="110dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_detail"
            app:srcCompat="@drawable/camera" />

        <TextView
            android:id="@+id/item_time"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:textColor="#746A6A"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/item_date"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="6dp"
            android:textColor="#746A6A"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/solved_checkbox"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/solved_checkbox"
            style="@style/MyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="7dp"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/meno_title"
            style="?android:textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:gravity="left"
            android:hint="@string/memory_title_hint"
            android:paddingLeft="21sp"
            android:paddingTop="15sp"
            android:paddingRight="18sp"
            android:paddingBottom="15sp"
            android:textColor="@color/colorLightDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/solved_checkbox"
            tools:layout_editor_absoluteX="0dp" />


        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="21dp"
            android:background="#DCDCDC"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/meno_title"
            tools:layout_editor_absoluteX="-16dp" />


        <EditText
            android:id="@+id/item_detail"
            style="?android:textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="50dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/memory_detail"
            android:lineSpacingExtra="6dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line2" />

        <TextView
            android:id="@+id/memory_remind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="21dp"
            android:layout_marginRight="21dp"
            android:text="@string/memory_remind"
            android:textColor="@color/colorLightDark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/memory_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintEnd_toStartOf="@+id/memory_remind"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/alarm" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            app:layout_constraintTop_toBottomOf="@+id/item_detail"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


